change homepage name

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://apdltpdl22.github.io/ReactPractice"
+  "homepage": "https://apdltpdl22.github.io/react-deploy"
 }
